fixed the code for better responsivity on Iphones and Pixels,...

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-    font-family: "Nunito";
+    font-family: "Poppins";
     box-sizing: border-box;
 }
 
@@ -37,12 +37,20 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4),
         inset 0 0 10px rgba(255, 255, 255, 0.9);
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
-    padding-bottom: 10px;
     overflow: hidden;
 }
+
+@media screen and (max-width: 320px) {
+    .main img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .clima {
+        align-items: end;
+    }
+}
+
 
 .dailyfilter {
     border-radius: 20px;
@@ -58,7 +66,7 @@ body {
 .daily-cards {
     position: relative;
     width: 85px;
-    height: 135px;
+    height: fit-content;
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.08);
     backdrop-filter: blur(20px);
@@ -69,6 +77,7 @@ body {
     text-align: center;
     padding-top: 10px;
     overflow: hidden;
+    min-width: 80px;
 }
 
 /* Liquid Glow only on top-left */
